# parallel-barnes-hut

./: .clang-format  .gitignore  CMakeLists.txt  NBodySim.cpp  NBodySim.h  README.md  main.cpp  model.cpp  model.h  nbody_sim.cpp  nbody_sim.h  star.cpp  star.h  vec3d.cpp  vec3d.h
base/: main.cpp  model.cpp  model.h  nbody_sim.cpp  nbody_sim.h  star.cpp  star.h  vec3d.cpp  vec3d.h
force_calc/: breadth_first_octree.cpp  breadth_first_octree.h  brute_force_calc.cpp  brute_force_calc.h  flat_oct_tree.cpp  flat_oct_tree.h  force_calc.cpp  force_calc.h  force_calc_all_pairs.cpp  force_calc_all_pairs.h  force_calc_barnes_hut.cpp  force_calc_barnes_hut.h  force_calc_barnes_hut_array.cpp  force_calc_barnes_hut_array.h  force_calc_barnes_hut_parallel.cpp  force_calc_barnes_hut_parallel.h  force_calc_exact.cpp  force_calc_exact.h  oct_tree.cpp  oct_tree.h  octree.cpp  octree.h
integrator/: integrator.cpp  integrator.h  integrator_euler.cpp  integrator_euler.h  integrator_leapfrog.cpp  integrator_leapfrog.h
performance_stats/: stopwatch.cpp  stopwatch.h
scripts/: build
sim_data/sim0/: init.txt
sim_data/sim1/: init.txt
test/: TestOctTree.cpp  test_main.cpp  test_octree.cpp
utils/: stopwatch.cpp  stopwatch.h
visualizer/: debug_visualizer.py  visualizer.py
